--- a/Cthulhu/MainPage.xaml
+++ b/Cthulhu/MainPage.xaml
@@ -3,34 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cthulhu.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
+
+    <VerticalStackLayout
+        Padding="30,0"
+        Spacing="25"
+            BackgroundColor="SlateGrey">
             <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+            x:Name="ImageItem"
+            Source="cthulhu.png"
+            HeightRequest="500"
+            VerticalOptions="Center"
+            Aspect="AspectFit">
 
+            </Image>
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+            HorizontalOptions="Center"
+            VerticalOptions="Center"
+            TextColor="#1f1f1f"
+            FontSize="Large"
+            Margin="0,-100,0,0"
+            FontAttributes="Bold"
+            FontFamily="sans-serif"
+            Text="Cthulhu is hungry for subtitles" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+    </VerticalStackLayout>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+
 
 </ContentPage>
